--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>I'm <br>a Software Developer</h1>
+						   					<h1>I'm <br>an aspiring Software Developer</h1>
 											</div>
 					   				</div>
 					   			</div>
@@ -137,7 +137,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p><strong>Hello, I'm Aravind Subramanian!</strong></p>
 										<p>I'm an experienced software professional who constantly seeks out innovative solutions to problems. In my four years in this industry with Microsoft, I've honed my analytical thinking and collaboration skills, and I love working with a team.</p>
-										<p>I wanted to steer my career towards software design and development, and hence pursuing Masters , did the following projects to showcase my skills in data structures and algorithms, object oriented design and distributed systems. *</p>
+										<p>I wanted to steer my career towards software design and development, and hence I'm pursuing my Masters in Computer and Information Sciences. I did the following <a href="#projectsid">projects</a> to understand and showcase my skills in data structures and algorithms, object oriented design and distributed systems.</p>
 										<p>I am interested in designing and developing highly available, scalable, and secure distributed software systems.</p>
 									</div>
 								</div>
@@ -509,7 +509,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 				   </div>
 				</div>
 			</section>
-			<section class="colorlib-projects" data-section="projects">
+			<section id="projectsid" class="colorlib-projects" data-section="projects">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
