collapse panel changes

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Software System Engineer, University of Florida</a> <span>August 2022 - Present</span></h2>
+					                  <h2><a href="#">Software Systems Engineer, University of Florida</a> <span>August 2022 - Present</span></h2>
 					                  <p>Tech Stack : Java, SpringMVC, Hibernate, SQL</p>
 									  <p>Working as a Graduate Research Assistant in design and development of secure, accessible, responsive and scalable web applications that meet privacy and security requirements of the Health Insurance Portability and Accountability Act for clinical research.</p>
 									  <ul>
