--- a/index.html
+++ b/index.html
@@ -538,7 +538,6 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 													<li>The instrcutions are parsed based on the opcodes and categorized into their respective classes.</li>
 													<li>The simuator handles all types of instrucions which single or multiple registers.</li>
 													<li>The simulation genrates an output logger file, with details about each step in the simulation</li>
-													<li>add github link</li>
 												</ul>
 												<p>Outcomes : Created a software simulation of the MIPS computer architecture which is able to load the input file into the program memory, perform emulation cycles and process opcodes efficiently. </p>
 									         </div>
@@ -558,9 +557,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 												<ul>
 													<li>The current simulation of the MIPS32 processor achieves Parallelism and executes multiple instructons in parallel.</li>
 													<li>I have impleme pipelining inorder to achieve the parallelsim. This exploits ILP by executing several instructions in parallel</li>
-													<li>Data Haazrds , Control Hazards and Structual Hazards are handled.</li>
+													<li>Data Hazards , Control Hazards and Structual Hazards are handled.</li>
 													<li>The simulation genrates an output logger file, with details about each step in the simulation and the details about hazards</li>
-													<li>add github link</li>
 												</ul>
 												<p>Outcomes : Created a software simulation of the MIPS computer architecture with parallelism and is able to handle all three hazards. Followed an object orietened design to implement it. </p>
 									        </div>
@@ -584,7 +582,6 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 													<li>B+ tree Implementation.</li>
 													<li>Algorithms to perform Query Evaluation</li>
 													<li>Implementation of Query Optimizer</li>
-													<li>Add Github Link</li>
 												</ul>
 												<p>Outcomes :The database system can be turned on and off on the go and can process changes and queries. The database system is also tested on TPC Benchmarks. </p>
 									        </div>
@@ -609,7 +606,6 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 													<li>Used different Probability distributions for each kind of events and implemented a cache system to keep track of certain events, instead of fetching directly from memory</li>
 													<li>Experimented with different kinds of caching algorithms and analysed the performance of simulation with different cache algorithms</li>
 													<li>Used numpy and seaborn libraries to visualize the analytics metrics.</li>
-													<li>Add Github Link</li>
 												</ul>
 												<p>Outcomes :Created and implemented an event-driven simulator for a network cache in Python and checked the performance and verified it for multiple test scenarios for different caching algorithms like LRU, MRU and LFU. Analyzed the behavior of the simulator on multiple probability distribution models with different parameters.</p>
 									        </div>
