--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									    </div>
 									    <div id="projectcollapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="projectOne">
 									         <div class="panel-body">
-									            <p>Sofwatre Simulation of MIPS32 Processsor</p>
+									            <p>Software Simulation of MIPS32 Processsor</p>
 												<p>Language: Python</p>
 												<ul>
 													<li>I have created a software simulation of the MIPS Processor which takes in a text file as in input and generates the assesmbly code equivalent of the input file.</li>
