--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Projects</span>
+							<span class="heading-meta">Work Projects</span>
 							<h2 class="colorlib-heading animate-box">Work Projects</h2>
 						</div>
 					</div>
