--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						<div class="col-md-5">
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="colorlib-icon">
-									<i class="icon-globe-outline"></i>
+									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
 									<p><a href="#">aravindssubramanian@gmail.com</a></p>
