Added intern experience

--- a/index.html
+++ b/index.html
@@ -493,7 +493,14 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Application Developer Intern - Tata Consultancy Services</a> <span>May 2016 - July 2016</span></h2>				               
+					               	<h2><a href="#">Application Developer Intern - Tata Consultancy Services</a> <span>May 2016 - July 2016</span></h2>	
+									   <p> Tech Stack : XCode3, Swift</p>
+									   <p>Helped in translating software requirements into workable programming code for an iOS mobile application.</p>
+									   <ul>
+											<li>Maintained and developed programs for use in business</li>
+											<li>Worked as Front-End Developer in Swift using XCode3</li>
+											
+									  </ul>		 			               
 								</div>
 					            </div>
 					         </article>
