About me changes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Aravind Subramanian</a></h1>
-				<span class="position"><a href="#">Software Developer</a> in the United States</span>
+				<span class="position"><a href="#">Software Engineer</a> in the United States</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -137,6 +137,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p><strong>Hello, I'm Aravind Subramanian!</strong></p>
 										<p>I'm an experienced software professional who constantly seeks out innovative solutions to problems. In my four years in this industry with Microsoft, I've honed my analytical thinking and collaboration skills, and I love working with a team.</p>
+										<p>As a Microsoft Customer Engineer, I have worked with our strategic partners and enterprise customers to enable them to achieve their business outcomes, based on their investments in Microsoft technology (Azure).
+											I have leveraged my technical subject matter expertise and lead technical conversations with partners to drive value from their Microsoft investments, including identifying resolutions to issues blocking customer success project. I have played the role of a Trusted Advisor, developed and expanded existing impactful relationships; created and sustained constructive tension and trust with partners and lead the adoption of Microsoft architecture technologies. Using my technical expertise, I have identified opportunities to develop new solutions and services for partner to take to market that drives the business for Clients and Microsoft.
+											</p>
 										<p>I wanted to steer my career towards software design and development, and hence I'm pursuing my Masters in Computer and Information Sciences. I did the following <a href="#projectsid">projects</a> to understand and showcase my skills in data structures and algorithms, object oriented design and distributed systems.</p>
 										<p>I am interested in designing and developing highly available, scalable, and secure distributed software systems.</p>
 									</div>
@@ -171,7 +174,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>I am open to full-time roles in Software Engineering from May 2023</h2>
+										<h2>I am open to full-time roles in Software Engineering or Software Development from May 2023</h2>
 										<a href="#" class="btn-hire">Hire me</a>
 									</div>
 								</div>
