--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">aravindssubramanian@gmail.com</a></p>
+									<p><a href="#">arvindssubramanian@gmail.com</a></p>
 								</div>
 							</div>
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
